# sequential-combination-mcp

./: Cargo.toml  Cargo.toml.DELETED  EXPLICATIONS.md  Explanation.md  README.md  SKILL_WRITING_GUIDE.md  requirements.txt
.github/workflows/: python-mcp.yml  release.yml
config/: combos_seed.json
rust-portage/sequential-combination-rs/: Cargo.toml  README.md
rust-portage/sequential-combination-rs/.github/workflows/: release.yml
rust-portage/sequential-combination-rs/config/: combos_seed.json
rust-portage/sequential-combination-rs/src/: config_loader.rs  dna_extractor.rs  main.rs  server.rs  skills_index.rs
src/: main.rs  server.py  server.rs  skills_index.py
